# wexler_garage_api

./: .gitignore  README.md  index.html  pyproject.toml  summary.json
.github/workflows/: main.yml  regression.yml  smoke.yml
1/: index.html
1/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1/export/: influxDbData.txt  prometheusData.txt
1/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
1/widgets/: duration.json  executors.json  severity.json  suites.json  summary.json
2/: index.html
2/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
2/export/: influxDbData.txt  prometheusData.txt
2/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
2/widgets/: categories-trend.json  duration.json  executors.json  severity.json  summary.json
3/: index.html
3/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
3/export/: influxDbData.txt  prometheusData.txt
3/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
3/widgets/: duration.json  executors.json  history-trend.json  severity.json  suites.json  summary.json
garage_api/assertions/: __init__.py  car_engines.py  cars.py  common.py  customers.py  operations.py  payments.py  services.py
garage_api/clients/: __init__.py  base.py  garage.py
garage_api/data/: fake_data.py
garage_api/helpers/: app.py
garage_api/model/: car_engines.py  cars.py  customers.py  operations.py  payments.py  services.py
garage_api/schemas/: garage.py  requests.py  responses.py
garage_api/utils/: requests_helper.py  sessions.py
tests/: conftest.py  example.py  test_administration.py  test_car_engines.py  test_cars.py  test_customers.py  test_kitchen.py  test_operations.py  test_payments.py  test_root.py  test_services.py  test_user.py
widgets/: charts.json  nav.json  pie_chart.json  timeline.json  tree-filters.json  tree.json
(+136 files in other folders)
