[tool.poetry]
name = "wexler_garage_api"
version = "0.1.0"
description = 'Project for automating the voitixler.com course "API and Postman course" on Python'
authors = ["Bohdan Obruch <bodan1992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
faker = "^33.0.0"
pydantic = "^2.10.5"
lorem = "0.1.1"
python-dotenv = "^1.0.1"
voluptuous = "^0.13.1"
pytest-voluptuous = "^1.2.0"
curlify = "^2.2.1"
pytest = "^7.4.3"
pytest-analyzer = "^1.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
